# bdsim

./: .coveragerc  .gitignore  .pylintrc  Block.py  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REALTIME_IO_DESIGN.md  TODO  ZOHx2.slx  bdsim-blocks-1.py  bdsim-blocks-2.py  bdsim.blocks.html  bdsim.html  blocks.py  demo_rlc_control.py  dynsim.py  genindex.html  index.html  internals.html  lgtm.yml  modules.html  objects.inv  parse.py  py-modindex.html  pyproject.toml  quad_model.py  requirements.txt  rlc_experiment.py  search.html  searchindex.js  setup.py  zz
.github/ISSUE_TEMPLATE/: bdedit-bug-report.md  bdsim-bug-report.md
.github/workflows/: ci.yml  master.yml  pages.yml  publish.yml
_downloads/4deb6fea2461a9ca377ae7c44f944e9c/: bdsim-blocks-3.py
_downloads/d6f75e3f2207f57b04a59ef68aa6b083/: bdsim-blocks-4.py
_images/: inheritance-4c623c026ba0f30f0834897c18097eb9671942c7.png.map  inheritance-502fecb75342b0b2ad103dd52e016e4b46a3bc42.png.map  inheritance-ab51bc6af5d3257fb62413f9b74819936e3200f4.png.map  inheritance-e97b2c7ddcddda2698040dc8677a3e008c238ac1.png.map
_modules/: index.html
_modules/bdsim/: bdsim.html  blockdiagram.html  components.html  graphics.html  run_sim.html  simulation.html
_sources/: bdsim.blocks.rst.txt  internals.rst.txt
_static/: documentation_options.js
bdsim/: Block.py  BlockDiagram.pyi  __init__.py  bdeditor.py  bdrealtime.py  bdrun.py  bdsim.py  blockdiagram.py  blockdiagram.pyi  blocks.py  components.py  dynsim.py  editor.py  graphics.py  quad_model.py  run.py  run_realtime.py  run_sim.py  simulation.py  test_blockdiagram.py  test_simulation.py
bdsim/bdedit/: Icons.py  Icons.qrc  README.md  Recognized formats of docstrings for bdedit.txt  __init__.py  bdedit README.md  bdedit.py  block.py  block_connector_block.py  block_graphics_block.py  block_graphics_socket.py  block_graphics_wire.py  block_importer.py  block_main_block.py  block_param_window.py  block_socket.py  block_socket_block.py  block_wire.py  floating_label.py  floating_label_graphics.py  grouping_box.py  grouping_box_graphics.py  icons.sh  interface.py  interface_graphics_scene.py  interface_graphics_view.py  interface_manager.py  interface_scene.py  interface_scene_history.py  interface_serialize.py  pyqt5_hello.py  pyside6_hello.py  tex2icon.py
bdsim/blocks/: README.md  TODO  __init__.py  __init__.py-ASIDE  basic.py  connections.py  discrete.py  displays.py  functions.py  icons.sh  io.py  linalg.py  opencv.py  robot.py  robots.py  robots.py-aside  sinks.py  sources.py  spatial.py  spatialmath.py  subsystem.py  subsystems.py  test_connections.py  test_functions.py  test_robots.py  test_sinks.py  test_sources.py  test_transfers.py  test_vision.py  tex2icon.py  transfers.py  vision.py
bdsim/tk_editor/: bdeditor.py  edit.py  editor.py
bdsim/tuning/: __init__.py  parameter.py  qt_collapsible.py  tunable_block.py
bdsim_realtime/: __init__.py  record.py  run.py
bdsim_realtime/blocks/: data.py  test_data.py
docs/: .buildinfo  Makefile  bdsim.blocks.html  bdsim.html  genindex.html  index.html  internals.html  modules.html  objects.inv  py-modindex.html  realtime-refactor-plan.md  search.html  searchindex.js
docs-aside/: bdsim.html  genindex.html  index.html  modules.html  objects.inv
docs-aside/_images/: inheritance-5109dac59cb77274d4d81ba307d983636abdce45.png.map  inheritance-5ad2615e966bf57f02dd816129aa8ab9d38d1708.png.map  inheritance-60e5f0c9f69b1b5eadcd8886a61f6bab1c8fa5e2.png.map  inheritance-774aaf2025d5b3e9eeeab44c7ebc25daa485eef8.png.map  inheritance-a5568020866d3faa713e8788ebee5d31535f23bb.png.map  inheritance-d3ca6488e80e274ac3d43e4aeaa28c8d0adc4ee1.png.map  inheritance-e050482be43d6b74f77c8644f516558665f17959.png.map  inheritance-f5537ea618e0fac62338c992f60483dd7ff4566f.png.map  inheritance-fec298c44c98c0fbd713eaf33c0b9c49fd9adde7.png.map
docs-aside/_sources/: index.rst.txt  internals.rst.txt
docs/_images/: inheritance-00e00602a76479f177342c9e44399fa23e344b20.png.map  inheritance-2e6b39f9e806f4da31c4baf0a768e5b1ec72a59a.png.map  inheritance-596710a430e4737f2cb3e9ac99e4c97022aafe16.png.map  inheritance-86d07af98fe6af9f4f231c158ecf13d9010aa8ec.png.map  inheritance-a7f25647960ac8cc0dc1ebf420bac973e9f05cb6.png.map  inheritance-af7f307d273227aa82ea3606256c0bea24eae672.png.map  inheritance-b73e4c5fc66d274cb80ffb7499bb974eef646de5.png.map  inheritance-b9980c2e0ad285409921f70914cc4aa0c8986d97.png.map  inheritance-c7e8ed2eb53a1e2e5570b265234dbb3ecb478110.png.map  inheritance-f1065f7e16d7b209ab88047fb47f90c2332b7c08.png.map  inheritance-fe2bf2fc66ff6abe73d810d88cdbb9dbe8fca353.png.map
docs/_modules/: index.html
docs/_sources/: bdsim.blocks.rst.txt  bdsim.rst.txt  index.rst.txt  (+1 more)
examples/: README.md  Untitled.ipynb  bd1.bdiag  bouncing-ball.ipynb  bouncing-ball.py  cartpole.py  deriv.py  discrete-integrator.py  discrete_vs_continuous.py  docstring-parser.py  docstring_parser.py  eg1.bd  eg1.json  eg1.py  eg1_zoh.py  eg1a.py  eg2.py  multi-clock.py  new.py  opencv-test.py  pid.py  pwm.py  rlc_discrete_control_circuit.py  rt1.py  rt_step.py  rvc4_11.py  rvc4_2.py  rvc4_4.py  rvc4_6.py  rvc4_8.py  sine+sampler.py  sine+sampler2.py  sine_adc.py  stack-overflow  subsys.py  subsys1.py  test_deriv1.py  test_deriv2.py  test_deriv_s.py  test_integrator.py  (+9 more)
figs/: data_structures.ezdraw  plugs_and_wires.ezdraw
src/: README.md
tests/: conftest.py  test_bdedit.py  test_bdrun.py  test_bdsim.py  test_blockdiagram.py  test_blockdiagram_coverage.py  test_components.py  test_connections.py  test_discrete.py  test_dynamic_loading.py  test_examples_smoke.py  test_functions.py  test_graphics.py  test_graphics_coverage.py  test_linalg.py  test_notebooks_smoke.py  test_run_realtime.py  test_run_sim.py  test_run_sim_coverage.py  test_sinks.py  test_sources.py  test_spatial.py  test_timers.py  test_transfers.py
(+227 files in other folders)
