[project]
name = "bdsim"
version = "2.0.0"
authors = [{ name = "Peter Corke", email = "rvc@petercorke.com" }]

dependencies = [
    "numpy>=1.17.4",
    "scipy",
    "matplotlib",
    "spatialmath-python",
    "ansitable",
    "progress",
]
license = { file = "LICENSE" }

description = "Simulate dynamic systems expressed in block diagram form using Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["python", "block diagram", "dynamic simulation"]

[project.urls]
homepage = "https://github.com/petercorke/bdsim"
documentation = "https://petercorke.github.io/bdsim/"
repository = "https://github.com/petercorke/bdsim"

[project.optional-dependencies]

dev = [
    "sympy",
    "pytest",
    "pytest-timeout",
    "pytest-xvfb",
    "pytest-qt",
    "coverage",
    "flake8",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-favicon",
    "sphinxcontrib-jquery",
]

bdedit = ["PySide6", "Pillow"]

bdweb = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]

all = ["PySide6", "Pillow", "fastapi>=0.111", "uvicorn[standard]>=0.29"]

[project.scripts]

bdrun = "bdsim.bin.bdrun:bdrun"
bdtex2icon = "bdsim.tex2icon:main"
bdedit-app = "bdedit.make_app:make_app"
bdedit-associate-windows = "bdedit.associate_bd_windows:main"
bdweb = "bdweb.backend.__main__:main"

[project.gui-scripts]

# ideally this would only happen if [edit] option given
bdedit = "bdedit.bdedit:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bdsim", "src/bdweb"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = "tests"

[tool.coverage.run]
omit = [
    "src/bdsim/tex2icon.py",
    "src/bdsim/blocks/io.py",
    "src/bdsim/blocks/vision.py",
    "tk_editor/*.py",
    "examples/RVC3/*.py",
]
